[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
actix-web-lab = { version = "0.23.0", features = ["spa"] }
env_logger = "0.11.5"
dotenv="0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
futures = "0.3.31"
reqwest = "0.12.8"
sqlite = "0.36.1"
rand = "0.8.5"
bcrypt = "0.15.1"


